--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
       name="viewport"
-      content="width=1600px, height=900px initial-scale=1, maximum-scale=1"
+      content="width=device-width, height=device-height initial-scale=0.5, maximum-scale=0.5"
     />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="A Combat Engine Written in React" />
